# almham

./: .gitattributes  .gitignore  AGENTS.md  NETWORK_MAP_TASK.md  README.md  SYSTEMS.md  angular.json  billing-plan.md  business-context.md  package-lock.json  package.json  run-claude.bat  temp-check-stations.mjs  test-api.html
backend/: .env.example  cookies.txt  ecas-users-report.txt  package-lock.json  package.json  real-users-report.txt  user-tables.txt
billing-web/: README.md
employee-mobile/: README.md  app.json  package-lock.json  package.json  tsconfig.json
exports/: _raw_dahamiya.csv  dahamiya-sales-per-period.csv  dahamiya-sales-per-period.html  dahamiya-sales-per-period.xlsx
imports/: TDECert.cer  _appinit-backup.txt  _challenge-admin-v3.out.txt  _dbpwd-analysis.txt  _deep-forensics.txt  _find-admin-store-deep.out.txt  _find-admin-store.out.txt  _forensics-output.txt  _inv-stores.out.txt  _login-history.out.txt  _mdb-inspect.out.txt  _sa-bruteforce.out.txt  _strg-admin.out.txt  _tmp_check.sql  _try-passwords.out.txt  _user-locale-backup.txt  _utf16-output.txt  _utf16-zuakha.txt  _zip-contents.txt  _zuakha-analysis.txt  analysis-Ecas2670.md  arabic-strings.txt  ecas-folder-listing.txt  ecas-forms.txt  ecas-schema.txt  ecas-users.txt  ecas2664-tables.txt  full-analysis.txt  (+5 more)
legacy-billing-desktop/tauri-billing/src-tauri/: Cargo.toml  tauri.conf.json
legacy-billing-desktop/tauri-billing/src-tauri/binaries/: .gitkeep
legacy-billing-desktop/tauri-billing/src-tauri/capabilities/: default.json
legacy-billing-desktop/tauri-billing/src-tauri/src/: main.rs
(+521 files in other folders)
