[package]
name = "ecas-legacy-billing-tauri"
version = "0.1.0"
description = "Tauri desktop shell for the legacy ECAS billing system"
authors = ["Alabasi"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
